# jrocks-personal-ai

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  TESTING.md  check_setup.py  cowork_test.txt  debug_chat.py  debug_output.txt  debug_output_2.txt  debug_output_3.txt  debug_output_4.txt  debug_rag.py  docker-compose.yml  main.py  pre_commit_optimizer.py  run_feedback_loop.py  run_photo_scan.bat  setup.cfg  test_cowork.py  verify_8001.txt  verify_api.py  verify_auth.py  verify_debug.txt  verify_final_main.txt  verify_final_main_v2.txt  verify_final_v2.txt  verify_final_v3.txt  verify_fintech.py  verify_output.txt  verify_people_auth.py  verify_photos_auth.py  verify_restart.txt  verify_router.py  (+4 more)
.agent/: AGENT_CONTEXT.md
.agent/workflows/: debug.md  dev.md  docker.md  git-push.md  index-drive.md  memory-optimize.md  new-project.md  photo-scan.md  plan.md  progress.md  setup.md  start-jrock.md  (+2 more)
Resources/: constraints.txt  package.json  requirements.txt
Sandbox/: freds-calculator.html
docs/: SETUP.md
feedback_loop_service/: README.md  config.json  install_startup.ps1  run_feedback_loop.py  start_watcher.ps1  test_feedback_append.py
frontend/: next.config.js  package-lock.json  package.json
scripts/: watch_takeout.ps1
tests/: test_circuit_breaker.py  test_consciousness.py  test_coordinator.py  test_e2e_ingestion.py  test_health.py  test_persona.py  test_photo_service.py  test_slm_engine.py  test_state_persistence.py  test_vision.py  test_webhooks.py  test_workflow.py
(+145 files in other folders)
