[metadata]
name = vibe_coding
version = 0.0.1
description = Vibe Coding app
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    # keep editable install using requirements file or constraints

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
addopts = -v --tb=short
