[metadata]
name = jrocks_personal_ai
version = 0.1.0
description = JRock's Personal AI - A digital consciousness ecosystem with chatbot, likeness generation, and content creation powered by local SLMs
author = JMCJDOG
author_email = jared.cohen55@gmail.com
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    # keep editable install using requirements file or constraints

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
addopts = -v --tb=short
